start from scratch with micrometer